src/components/games/GameDescription.css
#gameDescription {
    max-width: 35%;
    max-height: 100%;
    position: absolute;
    text-align: center;
}

#gameDescription h1 {
    font-size: 27px;
}

#gameDescription em p {
    color: rgb(171, 171, 171);
    font-size: 14px;
}

#gameDescription em,
#gameDescription h1,
#gameDescription p {
    padding: 0 2.5rem;
}

#gameDescription h1 {
    padding-top: 1.7rem;
}

#gameDescription p {
    text-align: justify;
    font-size: 16px;
    margin: 0;
}

.gameDescriptionContainer {
    border-bottom: 3px solid #45dbe9;
    background-color: rgba(0, 0, 0, 0.75);
    backdrop-filter: blur(6px);
    -webkit-backdrop-filter: blur(6px);
}

.gameDescriptionLine {
    height: 2px;
    margin-top: 10px;
    background-color: #45dbe9;
}

.closeButton {
    display: none;
}

.closeButton button {
}

.gamesItem .right {
    right: 4%;
}

.gamesItem .left {
    left: 4%;
}

@media (max-width: 60em) or (max-height: 45em) {
    #gameDescription em,
    #gameDescription h1,
    #gameDescription p {
        padding: 0 1rem;
    }
    
    #gameDescription h1 {
        padding-top: 1rem;
        font-size: 25px;
    }

    #gameDescription p {
        font-size: 15px;
    }
    
    #gameDescription .synopses {
        display: none;
    }
}

@media (min-width: 45em) or (max-height: 45em) {
    #gameDescription {
        bottom: 5%;
    }
}

@media (max-width: 75em) or (max-height: 45em) {
    #gameDescription {
        display: none;
        flex-direction: column;
        min-width: 100%;
        align-items: center;
        justify-content: center;
        top: 0;
        right: 0;
        left: 0;
    }
    
    #gameDescription em,
    #gameDescription h1,
    #gameDescription p {
        padding: 0 1rem;
    }

    #gameDescription h1 {
        padding-top: 1em;
        font-size: 20px;
    }

    #gameDescription p {
        font-size: 15px;
    }

    .gameDescriptionContainer {
        margin: 0 7em;
    }

    .gameDescriptionContainer p {
        font-size: 15px;
    }

    #gameDescription .description {
        margin-bottom: 0;
    }

    #gameDescription .synopses {
        display: none;
    }

    .closeButton {
        display: block;
        max-width: 30px;
        max-height: 30px;
        font-size: 15px;
        position: absolute;
        top: 0;
        right: 0;
    }

    .closeButton img {
        width: 25px;
        height: 25px;
    }
}

@media (max-width: 45em) {
    #gameDescription {
        min-width: 100%;
    }
    
    .gameDescriptionContainer {
        margin: 10em 0.5em 0;
    }
}

